fix: wrap long words in key places

--- a/assets/styles/src/base/_globals.scss
+++ b/assets/styles/src/base/_globals.scss
@@ -5,7 +5,6 @@
 html {
   font-size: var(--font-size-base);
   scrollbar-gutter: stable;
-  overflow-wrap: anywhere;
 }
 
 body {
