--- a/assets/styles/src/utilities/_typography.scss
+++ b/assets/styles/src/utilities/_typography.scss
@@ -105,3 +105,7 @@
 .uppercase {
   text-transform: uppercase;
 }
+
+.overflow-wrap-anywhere {
+  overflow-wrap: anywhere;
+}
